--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-is": "^18.2.0",
     "sanity": "^3.0.0",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
+    "sharp": "^0.31.3",
     "styled-components": "^5.2.0",
     "typescript": "4.9.4"
   },
