--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "^13.1.5",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
