minor fixes and added mobile nav functionality

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@next/font": "^13.1.5",
     "@portabletext/react": "^2.0.0",
@@ -25,7 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.0.0",
+    "sanity": "^3.2.6",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
     "sharp": "^0.31.3",
     "styled-components": "^5.2.0",
