--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
+    "@iconscout/react-unicons": "^1.1.6",
     "@next/font": "^13.1.5",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
