--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "framer-motion": "^9.0.0",
     "next": "^13.1.5",
     "next-sanity": "^4.1.1",
     "react": "18.2.0",
